--- a/front/src/locales/he.json
+++ b/front/src/locales/he.json
@@ -8,7 +8,14 @@
     "signup": "הרשמה",
     "dark": "מצב כהה",
     "light": "מצב בהיר",
-    "lang": "שפה"
+    "lang": "שפה",
+    "home": "בית",
+    "profile": "פרופיל",
+    "favorites": "מועדפים",
+    "cart": "עגלת קניות",
+    "admin": "לוח בקרה",
+    "logout": "התנתק",
+    "myCard": "הכרטיס שלי"
   },
   "home": {
     "headline": "פתרונות האבטחה של סמארט גייט",
@@ -27,6 +34,91 @@
     "login": "התחברות",
     "register": "הרשמה",
     "remember": "זכור אותי"
+  },
+  "footer": {
+    "description": "הספק המוביל של פתרונות אבטחה חכמים לבתים ועסקים. מגנים על מה שהכי חשוב עם טכנולוגיה מתקדמת.",
+    "company": "החברה",
+    "products": "מוצרים",
+    "legal": "משפטי",
+    "connect": "התחבר",
+    "about": "אודות",
+    "features": "תכונות",
+    "services": "שירותים",
+    "contact": "צור קשר",
+    "smartLocks": "מנעולים חכמים",
+    "accessories": "אביזרים",
+    "installation": "התקנה",
+    "support": "תמיכה",
+    "privacy": "מדיניות פרטיות",
+    "terms": "תנאי שירות",
+    "warranty": "אחריות",
+    "returns": "החזרות",
+    "followUs": "עקבו אחרינו ברשתות החברתיות",
+    "allRightsReserved": "כל הזכויות שמורות.",
+    "madeWith": "נוצר עם",
+    "inIsrael": "בישראל"
+  },
+  "products": {
+    "title": "מוצרי מנעולים חכמים",
+    "subtitle": "גלו את הקולקציה החדשה שלנו של מנעולים חכמים עם תכונות אבטחה מתקדמות",
+    "count": "המוצרים שלנו",
+    "noProducts": "אין מוצרים זמינים כרגע",
+    "noSearchResults": "לא נמצאו מוצרים עבור",
+    "addToCart": "הוסף לעגלה",
+    "addedToCart": "נוסף לעגלה!",
+    "version": "גרסה",
+    "price": "מחיר",
+    "features": "תכונות"
+  },
+  "favorites": {
+    "title": "המועדפים שלי",
+    "subtitle": "האוסף שלך של מוצרי מנעולים חכמים מועדפים",
+    "loginRequired": "נדרשת התחברות",
+    "loginMessage": "אנא התחבר כדי לצפות במוצרים המועדפים שלך",
+    "noFavorites": "אין מועדפים עדיין",
+    "noFavoritesMessage": "התחל לדפדף במוצרים והוסף אותם למועדפים על ידי לחיצה על סמל הלב",
+    "removeFromFavorites": "הסר מהמועדפים",
+    "addedToFavorites": "נוסף למועדפים",
+    "removedFromFavorites": "הוסר מהמועדפים",
+    "failedToUpdate": "נכשל בעדכון המועדפים"
+  },
+  "cart": {
+    "title": "עגלת קניות",
+    "empty": "עגלת הקניות שלך ריקה",
+    "emptyMessage": "הוסף כמה מוצרים כדי להתחיל!",
+    "browseProducts": "דפדף במוצרים",
+    "orderSummary": "סיכום הזמנה",
+    "subtotal": "סכום ביניים",
+    "shipping": "משלוח",
+    "free": "חינם",
+    "total": "סה\"כ",
+    "proceedToCheckout": "המשך לתשלום",
+    "secureCheckout": "תשלום מאובטח עם הצפנת SSL",
+    "clearCart": "נקה עגלה",
+    "continueShopping": "המשך קניות",
+    "itemRemoved": "פריט הוסר מהעגלה",
+    "cartCleared": "העגלה נוקתה",
+    "checkoutSoon": "פונקציית התשלום תהיה זמינה בקרוב!"
+  },
+  "common": {
+    "loading": "טוען...",
+    "error": "שגיאה",
+    "success": "הצלחה",
+    "cancel": "ביטול",
+    "save": "שמור",
+    "delete": "מחק",
+    "edit": "ערוך",
+    "add": "הוסף",
+    "remove": "הסר",
+    "close": "סגור",
+    "search": "חפש",
+    "searchProducts": "חפש מוצרים...",
+    "email": "אימייל",
+    "password": "סיסמה",
+    "name": "שם",
+    "phone": "מספר טלפון",
+    "required": "נדרש",
+    "optional": "אופציונלי"
   }
 }
 
